<resources>
    <string name="app_name">projet</string>

    <string name="about_title">about</string>
    <string name="added_recette">recette Ajouté a la db ✅</string>
    <string name="titre">titre</string>
    <string name="dur_e_preparation_en_minutes">durée preparation (en minutes)</string>
    <string name="dur_e_total_en_minutes">durée total (en minutes)</string>
    <string name="dificulty">dificulté</string>
    <string name="nombre_de_personnes">Nombre de personnes</string>
    <string name="étapes">étapes</string>
    <string name="etape_1">etape 1</string>
    <string name="ajouter_une_etape">Ajouter une étape</string>
    <string name="ingrédients">ingrédients</string>
    <string name="quantity">quantité</string>
    <string name="ingredient">ingrédient</string>
    <string name="ajouter_un_ingrédient">ajouter un ingrédient</string>
    <string name="enregistrer_la_recette">enregistrer la recette</string>
    <string name="hachis_parmentier">Hachis Parmentier</string>
    <string name="_42">42</string>
    <string name="_6">6</string>
    <string name="stepDétail">Hacher l\'oignon et l\'ail. Les faire revenir dans le beurre jusqu\'à ce qu\'ils soient tendres.</string>
    <string name="lundi">lundi</string>
    <string name="moyen">moyen</string>
    <string name="lasagnes_la_bolognaise">Lasagnes à la bolognaise</string>
    <string name="_2h42">2h42</string>
    <string name="_6_personnes">6 personnes</string>
    <string name="_plus_">+</string>
    <string name="etapeNum">etape %1$d</string>
    <string name="ingredientNum">ingrédient %1$d</string>
    <string name="prepaDur">durée de preparation : %1$s</string>
    <string name="persoNb">%1$s personnes</string>
    <string-array name="difficulty_array">
        <item>facile</item>
        <item>moyen</item>
        <item>difficile</item>
    </string-array>
    <string-array name="type_array">
        <item>unité</item>
        <item>kg</item>
        <item>g</item>
        <item>litre</item>
        <item>cl</item>
        <item>ml</item>
    </string-array>
    <string-array name="day_array">
        <item>lundi</item>
        <item>mardi</item>
        <item>mercredi</item>
        <item>jeudi</item>
        <item>vendredi</item>
        <item>samedi</item>
        <item>dimanche</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="boulettes">Boulettes sauce tomate</string>
    <string name="time">time</string>
    <string name="freuuuu">feuuuuu</string>
    <string name="facile">facile</string>
    <string name="addImage">ajouter une image</string>
    <string name="dark_vador">dark vador</string>
    <string name="dark_side">click to join the dark side</string>
    <string name="viens">allez viens on est bien</string>
    <string name="disconnect">disconnect</string>
    <string name="confused_travolta">confused travolta</string>
    <string name="taken">" taken"</string>
</resources>