<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/layout"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/titreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/titre"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <EditText
                android:inputType="text"
                android:id="@+id/titreET"
                style="@style/text"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/hachis_parmentier"
                android:ems="10"
                android:shadowColor="#FFFFFF"
                android:layout_gravity="center"
                android:autofillHints="" />
            <TextView android:id="@+id/prepatimeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/dur_e_preparation_en_minutes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/prepatimeET"
                style="@style/text"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_42"
                android:inputType="time"
                android:shadowColor="#FFFFFF" />
            <TextView android:id="@+id/timeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/dur_e_total_en_minutes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/timeET"
                style="@style/text"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_42"
                android:inputType="number"
                android:shadowColor="#FFFFFF" />
            <TextView android:id="@+id/difficultyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/dificulty"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/difficulty_spinner"
                android:layout_width="match_parent"
                android:layout_height="67dp" />
            <TextView android:id="@+id/nbpersoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/nombre_de_personnes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/nbpersoET"
                style="@style/text"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_6"
                android:inputType="number"
                android:shadowColor="#FFFFFF" />


            <TextView android:id="@+id/stepsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/étapes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView android:id="@+id/step1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etape_1"/>

            <EditText
                android:id="@+id/stepsET"
                style="@style/text"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/stepDétail"
                android:inputType="text"
                android:shadowColor="#FFFFFF" />
            <Button
                android:id="@+id/moreSteps_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_une_etape"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/red"/>
            <TextView android:id="@+id/ingrédientsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/ingrédients"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/ingredientQuantity"
                    android:hint="@string/quantity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/ingredientSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/ingredientET"
                    android:hint="@string/ingredient"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:inputType="text" />
            </LinearLayout>


            <Button
                android:id="@+id/addIngredient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_un_ingrédient"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addImage"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/red" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/red"
                android:contentDescription="@string/boulettes"
                app:srcCompat="@drawable/boulettesaucetomate" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer_la_recette"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/red"/>


        </LinearLayout>

    </ScrollView></layout>